--- a/config/train_rvlcdip.yaml
+++ b/config/train_rvlcdip.yaml
@@ -14,7 +14,7 @@ seed: 2022
 lr: 2e-5
 warmup_steps: 10000
 num_training_samples_per_epoch: 320000
-max_epochs: 100
+max_epochs: -1 # changed from 100 to -1
 max_steps: -1
 num_workers: 8
 val_check_interval: 1.0
